--- a/src/app/pages/pages/pages.component.html
+++ b/src/app/pages/pages/pages.component.html
@@ -1,18 +1,25 @@
 <mat-drawer-container>
     <!--Header-->
     <mat-drawer-content>
-        <mat-toolbar class="mat-elevation-z8">
+        <mat-toolbar class="mat-elevation-z8" color="success">
             <mat-toolbar-row>
-                <button mat-icon-button class="cart" routerLink="principal">
-          <mat-icon>storefront</mat-icon>
-        </button>
-                <span class="titulo">Mi página web</span>
-                <div _ngcontent-ylo-c50 class="flex-spacer"></div>
-                <span [matBadge]="cantidad" matBadgeOverlap="false">
-          <button mat-icon-button routerLink="carrito" class="cart">
-            <mat-icon>shopping_cart</mat-icon>
-          </button>
-        </span>
+
+                <div class="div-flex">
+                    <div>
+                        <button mat-icon-button class="cart" routerLink="principal">
+                            <mat-icon>storefront</mat-icon>
+                        </button>
+
+                        <span class="titulo">Mi página web</span>
+                    </div>
+
+                    <div>
+                        <span [matBadge]="cantidad" matBadgeOverlap="false" class="badge-icon"></span>
+                        <button mat-icon-button routerLink="carrito" class="cart">
+                            <mat-icon>shopping_cart</mat-icon>
+                        </button>
+                    </div>
+                </div>
             </mat-toolbar-row>
         </mat-toolbar>
         <div class="page-container">
