--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -1,18 +1,46 @@
-<mat-card class="example-card">
+<mat-card >
+    <br>
     <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title> Mapa del sistema </mat-card-title>
+        <mat-card-title class="titulo"> Mapa del sistema </mat-card-title>
     </mat-card-header>
-    <mat-card-content>
-        <p>
-            <button mat-raised-button color="primary" routerLink="/catalogo">Catalogo</button>
-        </p>
-        <p>
-            <button mat-raised-button color="primary" routerLink="/login">Login Administrativo</button>
-        </p>
-        <p>
-            <button mat-raised-button color="primary" routerLink="/login-cliente">Seguimiento de pedidos</button>
-        </p>
+    <br>
+    <mat-card-content class="flex-card">
+
+        <mat-card>
+            <div class="material-icons">
+                bookmarks
+            </div>
+            <p>
+                <button mat-raised-button color="primary" routerLink="/catalogo">Catalogo</button>
+            </p>
+
+        </mat-card>
+
+        <mat-card>
+
+            <div class="material-icons">
+                supervised_user_circle
+            </div>
+
+            <p>
+                <button mat-raised-button color="primary" routerLink="/login">Login Administrativo</button>
+            </p>
+
+        </mat-card>
+
+        <mat-card>
+
+            <div class="material-icons">
+                local_shipping
+            </div>
+
+            <p>
+                <button mat-raised-button color="primary" routerLink="/login-cliente">Seguimiento de pedidos</button>
+            </p>
+
+        </mat-card>
+
     </mat-card-content>
 
 </mat-card>
