--- a/src/app/pages/client-catalogo-list/client-catalogo-list.component.html
+++ b/src/app/pages/client-catalogo-list/client-catalogo-list.component.html
@@ -21,7 +21,7 @@
     <!-- Symbol Column -->
     <ng-container matColumnDef="accion">
         <th mat-header-cell *matHeaderCellDef> Acción </th>
-        <td mat-cell *matCellDef="let element"> <button mat-raised-button color="primary" (click)="agregarCarrito(element)">Agregar al carrito</button></td>
+        <td mat-cell *matCellDef="let element"> <button mat-raised-button color="accent" (click)="agregarCarrito(element)">Agregar al carrito</button></td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="columndefs"></tr>
