--- a/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -1,53 +1,81 @@
 <!--Tabla de productos-->
-<br>
-<mat-card>
-    <table mat-table [dataSource]="carrito">
 
-        <ng-container matColumnDef="nombre">
-            <th mat-header-cell *matHeaderCellDef> Nombre </th>
-            <td mat-cell *matCellDef="let element"> <span>{{element.descripcion}}</span></td>
-        </ng-container>
+<div class="contenedor">
 
-        <ng-container matColumnDef="descripcion">
-            <th mat-header-cell *matHeaderCellDef>Descripción</th>
-            <td mat-cell *matCellDef="let element"> <span>{{element.descripcion}}</span></td>
-        </ng-container>
 
-        <ng-container matColumnDef="cantidad">
-            <th mat-header-cell *matHeaderCellDef>Cantidad</th>
-            <td mat-cell *matCellDef="let element"> <span>{{element.cantidad}}</span></td>
-        </ng-container>
+    <div *ngIf="!tieneProductos" class="no-products">
+        <!-- <mat-card> -->
+            <div class="material-icons shop-icon">
+                production_quantity_limits
+            </div>
 
-        <ng-container matColumnDef="precio">
-            <th mat-header-cell *matHeaderCellDef>Precio</th>
-            <td mat-cell *matCellDef="let element"> <span>{{element.precio}}</span></td>
-        </ng-container>
-
-        <ng-container matColumnDef="subtotal">
-            <th mat-header-cell *matHeaderCellDef>Subtotal</th>
-            <td mat-cell *matCellDef="let element"> <span>{{element.precio * element.cantidad}}</span></td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-    </table>
-
-    <br>
-
-    <div class="flex-card">
-        <h2>TOTAL</h2>
-        <h2>S/. {{total}}</h2>
+            <h1> Su cesta está vacía </h1>
+            <div id="regresar-compra">
+                <button mat-button color="warn" routerLink="/catalogo">
+                    Agregar productos
+                </button>
+            </div>
+        <!-- </mat-card> -->
     </div>
-</mat-card>
-
-<br>
 
 
+    <div *ngIf="tieneProductos" class="card-table">
 
-<div id="continuar-compra">
-    <button mat-raised-button color="primary" routerLink="/registro-compra"> Continuar compra</button>
-</div>
 
-<div id="regresar-compra">
-    <button mat-button color="accent" routerLink="/catalogo"><mat-icon>keyboard_backspace</mat-icon>Agregar más productos</button>
+        <mat-card>
+            <table mat-table [dataSource]="carrito">
+
+                <ng-container matColumnDef="nombre">
+                    <th mat-header-cell *matHeaderCellDef> Nombre </th>
+                    <td mat-cell *matCellDef="let element"> <span>{{element.descripcion}}</span></td>
+                </ng-container>
+
+                <ng-container matColumnDef="descripcion">
+                    <th mat-header-cell *matHeaderCellDef>Descripción</th>
+                    <td mat-cell *matCellDef="let element"> <span>{{element.descripcion}}</span></td>
+                </ng-container>
+
+                <ng-container matColumnDef="cantidad">
+                    <th mat-header-cell *matHeaderCellDef>Cantidad</th>
+                    <td mat-cell *matCellDef="let element"> <span>{{element.cantidad}}</span></td>
+                </ng-container>
+
+                <ng-container matColumnDef="precio">
+                    <th mat-header-cell *matHeaderCellDef>Precio</th>
+                    <td mat-cell *matCellDef="let element"> <span>{{element.precio}}</span></td>
+                </ng-container>
+
+                <ng-container matColumnDef="subtotal">
+                    <th mat-header-cell *matHeaderCellDef>Subtotal</th>
+                    <td mat-cell *matCellDef="let element"> <span>{{element.precio * element.cantidad}}</span></td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+            </table>
+
+            <br>
+
+            <div class="flex-card">
+                <h2>TOTAL</h2>
+                <h2>S/. {{total}}</h2>
+            </div>
+        </mat-card>
+
+        <br>
+
+
+
+        <div id="continuar-compra">
+            <button mat-raised-button color="primary" routerLink="/registro-compra"> Continuar compra</button>
+        </div>
+
+        <div id="regresar-compra">
+            <button mat-button color="warn" routerLink="/catalogo">
+                <mat-icon>keyboard_backspace</mat-icon>Agregar más productos
+            </button>
+        </div>
+
+    </div>
+
 </div>
