--- a/src/app/principal/principal.component.scss
+++ b/src/app/principal/principal.component.scss
@@ -1,13 +1,12 @@
 .flex-card {
     display: flex;
     justify-content: space-around;
-
     mat-card   {
         text-align: center;
     }
 }
 
-.mat-card-header {
+.titulo {
     display: flex;
     align-items: center;
     justify-content: center;
