--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,10 +7,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 @include mat-core();
 
-$candy-app-primary: mat-palette($mat-red);
-$candy-app-accent:  mat-palette($mat-grey, A700);
-
-$candy-app-warn:    mat-palette($mat-red);
+$candy-app-primary:  mat-palette($mat-gray, 900);
+$candy-app-accent:  mat-palette($mat-red, 100);
+$candy-app-warn:   mat-palette($mat-red, 500);
 
 $candy-app-theme: mat-light-theme((
   color: (
