--- a/src/app/pages/administrador-catalogo-detail/administrador-catalogo-detail.component.html
+++ b/src/app/pages/administrador-catalogo-detail/administrador-catalogo-detail.component.html
@@ -1,8 +1,13 @@
-<mat-card class="example-card">
+
+<div *ngIf="isLoading" class="spinner">
+    <mat-spinner ></mat-spinner>
+</div>
+
+<mat-card *ngIf="!isLoading" class="example-card">
     <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
         <mat-card-title>Pedido #{{pedido.pedidoId}}
-            <mat-chip color="primary">Estado del pedido {{pedido.estado.nombre}}</mat-chip>
+            <mat-chip color="accent">Estado del pedido {{pedido.estado.nombre}}</mat-chip>
         </mat-card-title>
         <mat-card-subtitle>{{pedido.cliente.nombre}} {{pedido.cliente.apellido}}
             <div class="row">
@@ -22,7 +27,8 @@
                         Correo {{pedido.cliente.correo}}
                     </p>
                     <p>
-                        Dirección {{pedido.cliente.detarmento}}/{{pedido.cliente.provincia}}/{{pedido.cliente.distrito}} {{pedido.cliente.direccion}}
+                        Dirección {{pedido.cliente.detarmento}}/{{pedido.cliente.provincia}}/{{pedido.cliente.distrito}}
+                        {{pedido.cliente.direccion}}
                     </p>
                 </div>
             </div>
@@ -33,7 +39,7 @@
 
     <mat-card-content>
 
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource">
             <ng-container matColumnDef="item">
                 <th mat-header-cell *matHeaderCellDef>Item </th>
                 <td mat-cell *matCellDef="let element"> <span>{{element.detallePedidoId}}</span></td>
@@ -58,8 +64,13 @@
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
     </mat-card-content>
-    <mat-card-actions>
-        <button mat-button color="accent" routerLink="/administrador">Regresar</button>
+    <mat-card-actions class="card-flex">
+        <button mat-button color="warn" routerLink="/principal2/administrador"> 
+            <span class="material-icons">
+                west
+            </span>
+            &nbsp;
+            Regresar</button>
         <button mat-button color="primary" (click)="promoverEstadoPedido()">Promover a {{estado.nombre}}</button>
     </mat-card-actions>
 </mat-card>
