--- a/src/app/pages/administrador-catalogo-detail/administrador-catalogo-detail.component.scss
+++ b/src/app/pages/administrador-catalogo-detail/administrador-catalogo-detail.component.scss
@@ -3,3 +3,16 @@ table {
     margin: 2%;
     text-align: center;
 }
+
+.card-flex {
+    display: flex;
+    justify-content: space-evenly
+}
+
+.spinner {
+    width: 100%;
+    height: 70vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
