--- a/src/app/pages/administrador-catalogo-list/administrador-catalogo-list.component.html
+++ b/src/app/pages/administrador-catalogo-list/administrador-catalogo-list.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<table mat-table [dataSource]="dataSource">
 
     <!-- Position Column -->
     <ng-container matColumnDef="codPedido">
@@ -22,7 +22,7 @@
     <!-- Symbol Column -->
     <ng-container matColumnDef="acciones">
         <th mat-header-cell *matHeaderCellDef> Acciones </th>
-        <td mat-cell *matCellDef="let element"> <button mat-raised-button color="primary" (click)="verDetalle(element)">Ver detalle</button> </td>
+        <td mat-cell *matCellDef="let element"> <button mat-raised-button color="accent" (click)="verDetalle(element)">Ver detalle</button> </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
