--- a/src/app/pages/client-catalogo-list/client-catalogo-list.component.scss
+++ b/src/app/pages/client-catalogo-list/client-catalogo-list.component.scss
@@ -39,3 +39,12 @@
   th.mat-header-cell {
     text-align: center;
 }
+
+
+.spinner {
+    width: 100%;
+    height: 70vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
