--- a/src/app/pages/principal2/principal2.component.html
+++ b/src/app/pages/principal2/principal2.component.html
@@ -1,17 +1,35 @@
 <mat-drawer-container>
     <!--Header-->
     <mat-drawer-content>
-        <mat-toolbar class="mat-elevation-z8">
+        <mat-toolbar color="primary">
             <mat-toolbar-row>
-                <button mat-icon-button class="cart" routerLink="principal">
-          <mat-icon>storefront</mat-icon>
-        </button>
-                <span class="titulo">Mi página web</span>
-                <div _ngcontent-ylo-c50 class="flex-spacer"></div>
+                <div class="div-flex">
 
-                <button mat-icon-button (click)="cerrarSesion()" class="cart">
-           Cerrar Sesion
-          </button>
+                    <div>
+                        <button mat-icon-button class="cart" routerLink="principal">
+                            <mat-icon>storefront</mat-icon>
+                        </button>
+                        <span class="titulo">Mi página web</span>
+                    </div>
+
+
+                    <div>
+
+
+                        <button mat-icon-button 
+                                (click)="cerrarSesion()" 
+                                class="material-icons"
+                                matTooltip="Cerrar Sesión"
+                                >
+                            <span class="material-icons">
+                                exit_to_app
+                            </span>
+                        </button>
+                    </div>
+
+
+
+                </div>
 
             </mat-toolbar-row>
         </mat-toolbar>
