--- a/src/app/pages/administrador-catalogo-detail/administrador-catalogo-detail.component.scss
+++ b/src/app/pages/administrador-catalogo-detail/administrador-catalogo-detail.component.scss
@@ -9,10 +9,19 @@ table {
     justify-content: space-evenly
 }
 
-.spinner {
+.back-arrow{
+    display: flex;
+}
+
+.spinner, .error-text {
     width: 100%;
     height: 70vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+}
+
+.icono {
+    font-size: 60px;
 }
