--- a/src/app/pages/order-status/order-status.component.scss
+++ b/src/app/pages/order-status/order-status.component.scss
@@ -1,6 +1,6 @@
 
 :host {
-    display: flex;
+    // display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
@@ -8,6 +8,27 @@
    
     .alert-success { 
         border-style: dotted;
-        border-color:#7ebb7a  ;
+        border-color: #3949ab;
     }
   }
+
+  .spinner, .error-text {
+    width: 100%;
+    height: 70vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.icono {
+    font-size: 60px;
+}
+
+.back-arrow{
+    display: flex;
+}
+
+mat-card  {
+    padding: 0px 50px;
+}
