--- a/src/app/pages/administrador-catalogo-list/administrador-catalogo-list.component.scss
+++ b/src/app/pages/administrador-catalogo-list/administrador-catalogo-list.component.scss
@@ -3,3 +3,11 @@ table {
     margin: 2%;
     text-align: center;
 }
+
+.spinner {
+    width: 100%;
+    height: 70vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
