--- a/src/app/pages/administrador-catalogo-list/administrador-catalogo-list.component.html
+++ b/src/app/pages/administrador-catalogo-list/administrador-catalogo-list.component.html
@@ -1,30 +1,39 @@
-<table mat-table [dataSource]="dataSource">
+<div *ngIf="isLoading" class="spinner">
+    <mat-spinner></mat-spinner>
+</div>
 
-    <!-- Position Column -->
-    <ng-container matColumnDef="codPedido">
-        <th mat-header-cell *matHeaderCellDef> Cod. Pedido </th>
-        <td mat-cell *matCellDef="let element"> <span>{{element.pedidoId}}</span></td>
+<div *ngIf="!isLoading">
 
-    </ng-container>
+    <table mat-table [dataSource]="dataSource">
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="cliente">
-        <th mat-header-cell *matHeaderCellDef> Cliente </th>
-        <td mat-cell *matCellDef="let element"> {{element.cliente.nombre | uppercase }} {{element.cliente.apellido | uppercase}} </td>
-    </ng-container>
+        <!-- Position Column -->
+        <ng-container matColumnDef="codPedido">
+            <th mat-header-cell *matHeaderCellDef> Cod. Pedido </th>
+            <td mat-cell *matCellDef="let element"> <span>{{element.pedidoId}}</span></td>
 
-    <!-- Weight Column -->
-    <ng-container matColumnDef="estado">
-        <th mat-header-cell *matHeaderCellDef> Estado </th>
-        <td mat-cell *matCellDef="let element"> {{element.estado.nombre | uppercase}} </td>
-    </ng-container>
+        </ng-container>
 
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="acciones">
-        <th mat-header-cell *matHeaderCellDef> Acciones </th>
-        <td mat-cell *matCellDef="let element"> <button mat-raised-button color="accent" (click)="verDetalle(element)">Ver detalle</button> </td>
-    </ng-container>
+        <!-- Name Column -->
+        <ng-container matColumnDef="cliente">
+            <th mat-header-cell *matHeaderCellDef> Cliente </th>
+            <td mat-cell *matCellDef="let element"> {{element.cliente.nombre | uppercase }} {{element.cliente.apellido |
+                uppercase}} </td>
+        </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+        <!-- Weight Column -->
+        <ng-container matColumnDef="estado">
+            <th mat-header-cell *matHeaderCellDef> Estado </th>
+            <td mat-cell *matCellDef="let element"> {{element.estado.nombre | uppercase}} </td>
+        </ng-container>
+
+        <!-- Symbol Column -->
+        <ng-container matColumnDef="acciones">
+            <th mat-header-cell *matHeaderCellDef> Acciones </th>
+            <td mat-cell *matCellDef="let element"> <button mat-raised-button color="accent"
+                    (click)="verDetalle(element)">Ver detalle</button> </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+</div>
