--- a/src/app/pages/client-catalogo-list/client-catalogo-list.component.html
+++ b/src/app/pages/client-catalogo-list/client-catalogo-list.component.html
@@ -21,7 +21,7 @@
         <!-- Weight Column -->
         <ng-container matColumnDef="precio">
             <th mat-header-cell *matHeaderCellDef> Precio </th>
-            <td mat-cell *matCellDef="let element"> {{element.precio | number: '3.2-2'}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.precio |currency:'PEN':'symbol-narrow'}} </td>
         </ng-container>
 
         <!-- Symbol Column -->
