--- a/src/app/pages/detalle-compra-view/detalle-compra-view.component.scss
+++ b/src/app/pages/detalle-compra-view/detalle-compra-view.component.scss
@@ -16,3 +16,21 @@ text-align: center;
 td {
   text-align: center;
 }
+
+.error-text , .succes-text {
+  width: 100%;
+  // height: 70vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.icono {
+  font-size: 60px;
+}
+
+.flex-card {
+  display: flex;
+  justify-content: space-around
+}
