--- a/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -42,12 +42,12 @@
 
                 <ng-container matColumnDef="precio">
                     <th mat-header-cell *matHeaderCellDef>Precio</th>
-                    <td mat-cell *matCellDef="let element"> <span>{{element.precio}}</span></td>
+                    <td mat-cell *matCellDef="let element"> <span>{{element.precio | currency:'PEN':'symbol-narrow'}}</span></td>
                 </ng-container>
 
                 <ng-container matColumnDef="subtotal">
                     <th mat-header-cell *matHeaderCellDef>Subtotal</th>
-                    <td mat-cell *matCellDef="let element"> <span>{{element.precio * element.cantidad}}</span></td>
+                    <td mat-cell *matCellDef="let element"> <span>{{element.precio * element.cantidad | currency:'PEN':'symbol-narrow'}}</span></td>
                 </ng-container>
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
@@ -58,7 +58,7 @@
 
             <div class="flex-card">
                 <h2>TOTAL</h2>
-                <h2>S/. {{total}}</h2>
+                <h2>{{total | currency:'PEN':'symbol-narrow'}}</h2>
             </div>
         </mat-card>
 
